--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,5 @@
 spring.application.name=banking
-
 #PostgreSQL Configuration
-
 spring.datasource.url=jdbc:postgresql://localhost:5432/banking_db
 spring.datasource.username=postgres
 spring.datasource.password=mugreg066
@@ -9,4 +7,10 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-
+# email-specific configs
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=regis.mugisha007@gmail.com
+spring.mail.password=${PSWD}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
