chore(config): add mailtrap(Email delivery platform) smtp configurations

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,9 +8,9 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 # email-specific configs
-spring.mail.host=smtp.gmail.com
+spring.mail.host=sandbox.smtp.mailtrap.io
 spring.mail.port=587
-spring.mail.username=regis.mugisha007@gmail.com
-spring.mail.password=${PSWD}
+spring.mail.username=<mailtrap-smtp-username>
+spring.mail.password=<mailtap-smtp-password>
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
